# matheuspaivabrito.github.io

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
contato/: index.html
docs/: contato.md  index.md  sobre.md  stack.md
docs/pesquisa/: ia_generativa_no_desenvolvimento_de_software.md
docs/projetos/: atlas.md  bot-fipe.md  bronte-belo.md  index.md  vinicola.md
pesquisa/ia_generativa_no_desenvolvimento_de_software/: index.html
projetos/: index.html
projetos/atlas/: index.html
projetos/bot-fipe/: index.html
projetos/vinicola/: index.html
search/: search_index.json
site/: index.html  sitemap.xml
site/contato/: index.html
site/projetos/: index.html
site/projetos/atlas/: index.html
site/projetos/bot-fipe/: index.html
site/projetos/bronte-belo/: index.html
site/projetos/vinicola/: index.html
site/sobre/: index.html
site/stack/: index.html
sobre/: index.html
