[project]
name = "matheuspaivabrito-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Paiva",email = "matheuspaivabrito@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "matheuspaivabrito"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)"
]
